<resources>
    <string name="app_name">Instagram</string>
    <string name="anugrahnr._">anugrahnr._</string>
    <string name="dots">dots</string>
    <string name="content">content</string>
    <string name="like">like</string>
    <string name="total_like">170</string>
    <string name="comment">comment</string>
    <string name="total_comment">17</string>
    <string name="send">send</string>
    <string name="total_send">17</string>
    <string name="save">save</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat .</string>
    <string name="Clue">clue</string>
    <string name="date">April 14</string>
    <string name="liked_by">Liked by @anugrahnr._ and 99 others</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="postimg">postimg</string>
    <string name="little_clue_about_me">Little clue about me</string>

    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="patty">patty</string>
    <string name="Nugrah">Nugrah</string>
    <string name="post_count">6</string>
    <string name="foll_count">100M</string>
    <string name="follow">17</string>
    <string name="secret.admire">secret.admire</string>
    <string name="secret">Crush On you</string>
    <string name="cap">“Perihal Aku,si pemotret Bandung,dengan dia si penuang diksi mendung.Keduanya berjumpa dibawah kukungan langit mendung.
Namun Alur tak pernah selaras ,kini tak ada afeksi indah yang tercipta.”
-Secret Admirer</string>





    <string name="posts">post</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share_profile">Share profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caption">caption</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="posting">posting</string>
    <string name="addbtn">addBtn</string>
    <string name="following">following</string>
    <string name="message">Message</string>
    <string name="follower">follower</string>
    <string name="following_">following</string>
    <string name="activity">Activity</string>
    <string name="more">more</string>
    <string name="create">create</string>
    <string name="browse">browse</string>
</resources>